tests/snapshots/01_simple__apply.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/01_simple/apply.lam
---
z

term
  nodes: 10
  depth: 6

eval
  steps:    3
  reduces:  3
  allocs:   2
  time:     [time]
