tests/snapshots/01_simple__const_first.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/01_simple/const_first.lam
---
a

term
  nodes: 7
  depth: 5

eval
  steps:    2
  reduces:  2
  allocs:   0
  time:     [time]
