tests/snapshots/01_simple__full_normal_form_under_binder.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/01_simple/full_normal_form_under_binder.lam
---
λx. λy. y x

term
  nodes: 8
  depth: 5

eval
  steps:    1
  reduces:  1
  allocs:   1
  time:     [time]
